# cmake-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake-library.cpp
cmake/: FetchGoogleTest.cmake  MyLibraryConfig.cmake
docs/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt  HelloWorld.cpp
include/: MyLibrary.h
src/: CMakeLists.txt  MyLibrary.cpp
tests/: CMakeLists.txt  TestExample.cpp
